--- a/index.html
+++ b/index.html
@@ -1,4 +1,12 @@
-<script type="module">
+<!DOCTYPE html>
+<html>
+<body>
+
+<h1>My First Heading</h1>
+<p>My first paragraph.</p>
+
+
+  <script type="module">
   // Import the functions you need from the SDKs you need
   import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.3/firebase-app.js";
   // TODO: Add SDKs for Firebase products that you want to use
@@ -18,3 +26,5 @@
   // Initialize Firebase
   const app = initializeApp(firebaseConfig);
 </script>
+</body>
+</html>
